--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="**/*.java|**/*.scala" kind="src" output="target/classes" path="src/main/scala">
+	<classpathentry including="**/*.scala" kind="src" output="target/classes" path="src/main/scala">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
