--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
   
   <repositories>
     
+    
+    
     <repository>
       <id>apache</id>
       <url>https://repository.apache.org/content/repositories/releases</url>
@@ -22,6 +24,27 @@
       <version>2.2.0</version>
       <scope>provided</scope>
     </dependency>
+
+ <!-- https://mvnrepository.com/artifact/com.databricks/spark-xml -->
+<dependency>
+    <groupId>com.databricks</groupId>
+    <artifactId>spark-xml_2.11</artifactId>
+    <version>0.4.1</version>
+</dependency>
+
+<dependency> 
+      <groupId>com.univocity</groupId> 
+      <artifactId>univocity-parsers</artifactId> 
+      <version>2.2.1</version> 
+</dependency> 
+<!-- https://mvnrepository.com/artifact/com.databricks/spark-csv -->
+<dependency>
+    <groupId>com.databricks</groupId>
+    <artifactId>spark-csv_2.11</artifactId>
+    <version>1.5.0</version>
+</dependency>
+
+    
     <dependency> <!-- Spark dependency -->
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.11</artifactId>
